--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@
 buildscript {
     ext.kotlin_version = '1.1.2-4'
     repositories {
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        //maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.1'
@@ -16,7 +18,9 @@ buildscript {
 
 allprojects {
     repositories {
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        //maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        jcenter()
+        mavenCentral()
     }
 }
 
