--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ android:
     - android-25
     - extra-google-m2repository
     - extra-android-m2repository
+licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
 before_install:
   - chmod +x gradlew
 before_cache:
