--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@ language: android
 jdk: oraclejdk8
 android:
   components:
+    - tools
     - build-tools-25.0.3
     - android-25
     - extra-google-m2repository
     - extra-android-m2repository
-licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
 before_install:
   - chmod +x gradlew
 before_cache:
